src/ui/public/kibi/directives/kibi_nav_bar.less
@import (reference) "~ui/kibi/styles/kibi_variables.less";

@split-tabs-height: 42px;
@split-tabs-hpadding: 4px;
@split-tabs-icon-max-width: 14px;
@tabs-top-margin: 2px;

kibi-nav-bar {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;

  background-color: #656a76;
  width: 100%;

  nav {
    background-color: #656a76;
    display: table;
    width: 100%;

    > * {
      display: table-cell;
    }

    .nav > li > a {
      padding: 8px 8px;
    }

    .tab-container {
      margin: 0px 6px;
      overflow: hidden;
      position: relative;
      height: 38px;

      .nav-tabs {
        white-space: nowrap;
        position: absolute;

        > li {
          margin-top: 2px;
          float: none !important;
          display: inline-block;

          > a {
            cursor: pointer;
            text-decoration: none;
            border-color: #656a76 #656a76 transparent #656a76;
            background-color: #dedede;

            &:hover,
            &:focus {
              background-color: #fff;
            }

            img.icon {
              width: 16px;
              height: 16px;
            }

          }

          &.active > a {
            border-color: #656a76 #656a76 transparent #656a76;
            background-color: #ecf0f1;
            font-weight: bold;
          }
        }

      }
    }

    &.splitTabs {
      .tab-container {
        height: @split-tabs-height;
      }

      .nav > li > a {
        padding: 0 @split-tabs-hpadding;
        height: @split-tabs-height;
        display: table-cell;
        vertical-align: middle;
        text-align: center;
        line-height: 1.2em;

        &.filter {
          padding-right: (@split-tabs-icon-max-width + @split-tabs-hpadding * 2);
        }

        &.icon {
          padding-left: (@split-tabs-icon-max-width + @split-tabs-hpadding * 2);
        }

        .icon {
          display: block;
          position: absolute;
          top: 0;
          height: (@split-tabs-height - @tabs-top-margin);
          line-height: (@split-tabs-height - @tabs-top-margin);
          left: @split-tabs-hpadding;
          width: @split-tabs-icon-max-width;
          text-align: center;
        }

        .filter-icon {
          display: block;
          position: absolute;
          top: 0;
          height: (@split-tabs-height - @tabs-top-margin);
          line-height: (@split-tabs-height - @tabs-top-margin);
          right: @split-tabs-hpadding;
          width: @split-tabs-icon-max-width;
          text-align: center;
        }
      }
    }
  }


  .dashboard-select {
    margin-left: 2px;
    border-width: 1px;
    border-color: @kibi-menu-template-border-dark;
    background: @kibi-menu-template-bg;
    border-style: solid;
    padding: 2px 4px;
    border-radius: 2px;
  }


  button {
    background: transparent;
    color: #ecf0f1;
    padding: 5px 10px;

    &:hover {
      color: #fff;
    }
  }

  kibi-dashboard-toolbar {
    width: 1%;
    text-align: right;
    vertical-align: middle;
    white-space: nowrap;

    .button-group {
      display: inline-block;
    }

  }

  .tab-scroller {
    width: 1%;
    vertical-align: middle;
    white-space: nowrap;
    opacity: 1;

    button {
      font-size: 18px;
      padding: 5px 0;

      &:focus,
      &:active {
        outline: none !important;
      }

      &:last-child {
        margin-right: 14px;
      }
    }

  }

}

